tests/language_modules/08_routines/valid/function_returns_integer.vf
module FunctionReturnsInteger

function count() returns Integer
is
    return 42
end count

end FunctionReturnsInteger