tests/language_modules/08_routines/invalid_semantics/keyword_parameter_name.vf
module KeywordParameterName

function read(value: Integer) returns Integer
is
    return value
end read

end KeywordParameterName